crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMPTZ_TBL VALUES ('tomorrow EST');"
---
InsertStmt@0..52
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..27
    Ident@12..27 "TIMESTAMPTZ_TBL"
  Whitespace@27..28 " "
  SelectStmt@28..50
    Values@28..34 "VALUES"
    Whitespace@34..35 " "
    Ascii40@35..36 "("
    List@36..50
      AConst@36..50
        Sconst@36..50 "'tomorrow EST'"
  Ascii41@50..51 ")"
  Ascii59@51..52 ";"

