crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@60.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMPTZ_TBL VALUES ('1997.041 17:32:01 UTC');"
---
InsertStmt@0..61
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..27
    Ident@12..27 "TIMESTAMPTZ_TBL"
  Whitespace@27..28 " "
  SelectStmt@28..59
    Values@28..34 "VALUES"
    Whitespace@34..35 " "
    Ascii40@35..36 "("
    List@36..59
      AConst@36..59
        Sconst@36..59 "'1997.041 17:32:01 UTC'"
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

