crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@63.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMPTZ_TBL VALUES ('19970710 173201 America/New_York');"
---
InsertStmt@0..72
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..27
    Ident@12..27 "TIMESTAMPTZ_TBL"
  Whitespace@27..28 " "
  SelectStmt@28..70
    Values@28..34 "VALUES"
    Whitespace@34..35 " "
    Ascii40@35..36 "("
    List@36..70
      AConst@36..70
        Sconst@36..70 "'19970710 173201 Amer ..."
  Ascii41@70..71 ")"
  Ascii59@71..72 ";"

