crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@65.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMPTZ_TBL VALUES ('19970710 173201 America/Does_not_exist');"
---
InsertStmt@0..78
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..27
    Ident@12..27 "TIMESTAMPTZ_TBL"
  Whitespace@27..28 " "
  SelectStmt@28..76
    Values@28..34 "VALUES"
    Whitespace@34..35 " "
    Ascii40@35..36 "("
    List@36..76
      AConst@36..76
        Sconst@36..76 "'19970710 173201 Amer ..."
  Ascii41@76..77 ")"
  Ascii59@77..78 ";"

