crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@7.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMPTZ_TBL VALUES ('tomorrow zulu');"
---
InsertStmt@0..53
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..27
    Ident@12..27 "TIMESTAMPTZ_TBL"
  Whitespace@27..28 " "
  SelectStmt@28..51
    Values@28..34 "VALUES"
    Whitespace@34..35 " "
    Ascii40@35..36 "("
    List@36..51
      AConst@36..51
        Sconst@36..51 "'tomorrow zulu'"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

